--- a/hawc/apps/assessment/templates/assessment/assessment_downloads.html
+++ b/hawc/apps/assessment/templates/assessment/assessment_downloads.html
@@ -13,7 +13,7 @@
       <h6 class="mb-1 font-size-regular font-weight-bold">Literature Review</h6>
       <div class="list-group my-2">
         {% url 'lit:api:assessment-reference-export' assessment.pk as the_url %}
-        {% include "assessment/fragments/downloads_select.html" with link=the_url format="xlsx" name='references' text="Reference Export" help_text="All references and tags." allow_unpublished=False %}
+        {% include "assessment/fragments/downloads_select.html" with link=the_url format="xlsx" name='references' text="Reference Export" help_text="All references and tags. Wide format is one row per reference (and one column per tag); long format is one row per reference-tag combination." allow_unpublished=False reference_long=True %}
         {% if obj_perms.edit and assessment.literature_settings.conflict_resolution %}
           {% url 'lit:api:assessment-user-tag-export' assessment.pk as the_url %}
           {% include "assessment/fragments/downloads_select.html" with link=the_url format="xlsx" name='references-usertags' text='User Tag Export' help_text="All references and tags, including user tags. Team members only." allow_unpublished=False %}
