update visual list filter widgets, add permissions

--- a/hawc/apps/assessment/templates/assessment/fragments/label_indicators.html
+++ b/hawc/apps/assessment/templates/assessment/fragments/label_indicators.html
@@ -1,6 +1,6 @@
 {% if oob %}
   <div
-    class="d-flex align-items-center ml-1 flex-wrap"
+    class="d-flex align-items-center ml-1 pb-3 flex-wrap"
     id="label-indicators"
     hx-swap-oob="outerHTML"
   >
