a few upates from testing

--- a/hawc/apps/vocab/templates/vocab/toxrefdb_browse.html
+++ b/hawc/apps/vocab/templates/vocab/toxrefdb_browse.html
@@ -1,8 +1,8 @@
 {% extends 'crumbless.html' %}
 
 {% block content %}
-  <a class="pull-right btn btn-primary" href="{% url 'vocab:api:toxref-nested' %}?format=xlsx">Download</a>
-  <h2>ToxRef Database Vocabulary</h2>
+  <a class="pull-right btn btn-primary" href="{% url 'vocab:api:toxrefdb-nested' %}?format=xlsx">Download</a>
+  <h2>ToxRefDB Database Vocabulary</h2>
   <div>
     <p>
       Experimental data extracted into HAWC is designed to enable filtering, sorting, and
