remove duplicative view

--- a/hawc/apps/lit/templates/lit/reference_search_visual.html
+++ b/hawc/apps/lit/templates/lit/reference_search_visual.html
@@ -1,8 +1,7 @@
 {% extends 'assessment-rooted.html' %}
 
 {% block content %}
-  <div id='main'></div>
-  {% crispy form %}
+  <div id="main"></div>
 {% endblock %}
 
 {% block extrajs %}
