Labeled Items List (#1091)
* label detail page

* lint

* change to filtered list view

* update visual list filter widgets, add permissions

* add prefetching, change template tag name, consolidate label html

* html formatting

* remove get_label_choices

--- a/hawc/apps/summary/templates/summary/visual_list.html
+++ b/hawc/apps/summary/templates/summary/visual_list.html
@@ -26,15 +26,17 @@
           <td>
             <div class="d-flex align-items-center">
               <a class="text-nowrap" href="{{visual.get_absolute_url}}">{{visual.title}}</a>
-              {% for labeled_item in visual.visible_labels %}
-                <div class="tny mx-1 label" style="background-color: {{labeled_item.label.color}}; color: {{labeled_item.label.text_color}};" title="{{labeled_item.label.description}}">{{labeled_item.label.name}}</div>
-              {% endfor %}
-              {% for labeled_item in visual.datapivotquery.visible_query_labels %}
-                <div class="tny mx-1 label" style="background-color: {{labeled_item.label.color}}; color: {{labeled_item.label.text_color}};" title="{{labeled_item.label.description}}">{{labeled_item.label.name}}</div>
-              {% endfor %}
-              {% for labeled_item in visual.datapivotupload.visible_upload_labels %}
-                <div class="tny mx-1 label" style="background-color: {{labeled_item.label.color}}; color: {{labeled_item.label.text_color}};" title="{{labeled_item.label.description}}">{{labeled_item.label.name}}</div>
-              {% endfor %}
+              <div class="d-flex flex-wrap">
+                {% for labeled_item in visual.visible_labels %}
+                  {% include "assessment/fragments/label.html" with label=labeled_item.label anchor_tag=True %}
+                {% endfor %}
+                {% for labeled_item in visual.datapivotquery.visible_query_labels %}
+                  {% include "assessment/fragments/label.html" with label=labeled_item.label anchor_tag=True %}
+                {% endfor %}
+                {% for labeled_item in visual.datapivotupload.visible_upload_labels %}
+                  {% include "assessment/fragments/label.html" with label=labeled_item.label anchor_tag=True %}
+                {% endfor %}
+              </div>
               {% if not visual.published %}
                 <i class="fa fa-eye-slash mx-1" title="Unpublished (not be visible to the public)" aria-hidden="true"></i>
               {% endif %}
