--- a/hawc/apps/assessment/templates/assessment/fragments/label_indicators.html
+++ b/hawc/apps/assessment/templates/assessment/fragments/label_indicators.html
@@ -1,11 +1,11 @@
 {% if oob %}
   <div
-    class="d-flex align-items-center ml-1"
+    class="d-flex align-items-center ml-1 pb-3 flex-wrap"
     id="label-indicators"
     hx-swap-oob="outerHTML"
   >
     {% for label in labels %}
-      <div class="label mx-1 mb-3" style="background-color: {{label.color}}; color: {{label.text_color}};" title="{{label.description}}">{{label.name}}</div>
+      {% include "assessment/fragments/label.html" with big=True anchor_tag=True %}
     {% endfor %}
   </div>
 {% else %}
