--- a/hawc/static/css/hawc.css
+++ b/hawc/static/css/hawc.css
@@ -59,6 +59,7 @@ input[type="submit"].btn, section button.btn, section input[type="button"].btn, 
     overflow: hidden;
     font-size: 0.85rem;
     padding: .2rem 1rem .2rem .4rem;
+    font-family: Source Sans Pro Web, "Noto Sans Arabic", "Noto Sans BN homepage", "Noto Sans GU homepage", "Noto Sans KR homepage", "Noto Sans SC homepage", "Noto Sans BN", "Noto Sans GU", "Noto Sans KR", "Noto Sans SC", "Noto Sans TC", "Helvetica Neue", Helvetica, Arial, sans;
     clip-path: polygon(
         0% 0,
         calc(100% - 12px) 0,
@@ -66,7 +67,22 @@ input[type="submit"].btn, section button.btn, section input[type="button"].btn, 
         100% 52%,
         calc(100% - 12px) 100%,
         0% 100%
-    )
+    );
+    -webkit-transition: all 0.1s ease-in;
+    transition: all 0.1s ease-in;
+}
+.label:hover{
+    -webkit-transform: scale(1.1);
+    transform: scale(1.1);
+    text-decoration: none;
+    cursor: pointer;
+}
+
+.clickable:hover:has(.label:hover) {
+    background-color: unset !important;
+}
+.clickable:hover:has(.label:hover) .bg-light {
+    background-color: #f8f9fa !important;
 }
 
 .unpublishedBadge+.actionsMenu, .unpublishedBadge+button.close {
@@ -142,6 +158,19 @@ tfoot > tr > td {
 }
 .dark-link, .dark-link:visited {
     color: #495057;
+}
+.clickable, .clickable .bg-light {
+    transition: background-color 0.20s ease;
+    cursor: pointer;
+}
+.clickable:active {
+    background-color: #e3e4e5 !important;
+}
+.bg-light.clickable:hover, .clickable:hover .bg-light {
+    background-color: #e6e7e8 !important;
+}
+.bg-light.clickable:active, .clickable:active .bg-light {
+    background-color: #d4d5d6 !important;
 }
 .showOptsCaret:hover .optsCaret {
     opacity: 1;
@@ -739,13 +768,20 @@ a.outline-btn:hover, .dropdown.outline-btn:hover, .btn.outline-btn:hover {
     padding: 0.2rem 0.75rem;
 }
 
-div.input-group span.autocompletetextwidget {
-    height: 37.5px;
+div.input-group span.autocompletetextwidget, div.input-group span.autocompleteselectmultiplewidget {
+    height: 38px;
     line-height: 1.7;
+    border-radius: 0px;
+    min-width: 250px;
 }
 
-div.input-group-append select {
+div.input-group-append select, div.input-group-append span.select2 {
     height: 100%;
+}
+
+div.input-group-append input.select2-search__field {
+    font-size: 1rem;
+    height: 38px !important;
 }
 
 /* BMD APPLICATION STYLES */
