--- a/hawc/apps/summary/templates/summary/summarytable_detail.html
+++ b/hawc/apps/summary/templates/summary/summarytable_detail.html
@@ -19,7 +19,9 @@
           <a class="dropdown-item" href="{{object.get_delete_url}}">
             <i class="fa fa-fw fa-trash"></i>&nbsp;Delete
           </a>
-          <a class="dropdown-item" data-toggle="modal" data-target="#label-modal" hx-get="{% url 'assessment:label-item' content_object.0.pk content_object.1 %}?action=label" hx-target="#label-modal-content">Apply labels</a>
+          <a class="dropdown-item" data-toggle="modal" data-target="#label-modal" hx-get="{% url 'assessment:label-item' content_object.0.pk content_object.1 %}?action=label" hx-target="#label-modal-content">
+            <i class="fa fa-fw fa-tag"></i>&nbsp;Apply labels
+          </a>
         {% endif %}
       {% endactions %}
     {% endif %}
