update code to 2.0

--- a/hawc/apps/summary/templates/summary/_smartTagEditModal.html
+++ b/hawc/apps/summary/templates/summary/_smartTagEditModal.html
@@ -1,7 +1,7 @@
 {% extends 'common/modal_template.html' %}
 
 {% block modal_title %}
-  Insert HAWC Smart-tag
+  Insert Smart Tag
 {% endblock %}
 
 {% block modal_body %}
