rewrite pattern for loading labels to items

--- a/hawc/apps/assessment/templates/assessment/fragments/label_indicators.html
+++ b/hawc/apps/assessment/templates/assessment/fragments/label_indicators.html
@@ -9,9 +9,10 @@
     {% endfor %}
   </div>
 {% else %}
+  {% label_htmx_url object as url %}
   <div
     id="label-indicators"
-    hx-get="{% url 'assessment:label-item' content_type object_id %}?action=label_indicators"
+    hx-get="{{url}}?action=label_indicators"
     hx-trigger="load"
     hx-swap="none"
   ></div>
