--- a/hawc/apps/assessment/templates/assessment/fragments/label_indicators.html
+++ b/hawc/apps/assessment/templates/assessment/fragments/label_indicators.html
@@ -1,18 +1,15 @@
 {% if oob %}
-  <div
-    class="d-flex align-items-center ml-1 pb-3 flex-wrap"
+  <div class="d-flex align-items-center ml-1 pb-3 flex-wrap"
     id="label-indicators"
-    hx-swap-oob="outerHTML"
-  >
+    hx-swap-oob="outerHTML">
     {% for label in labels %}
       {% include "assessment/fragments/label.html" with big=True anchor_tag=True %}
     {% endfor %}
   </div>
 {% else %}
-  {% label_htmx_url object as url %}
   <div
     id="label-indicators"
-    hx-get="{{url}}?action=label_indicators"
+    hx-get="{% label_htmx_url object %}?action=label_indicators"
     hx-trigger="load"
     hx-swap="none"
   ></div>
