Feat: add CRUDL TaskType, TaskStatus, TaskTrigger

--- a/hawc/apps/mgmt/templates/mgmt/assessment_dashboard.html
+++ b/hawc/apps/mgmt/templates/mgmt/assessment_dashboard.html
@@ -7,6 +7,7 @@
       <span class="dropdown-header">Tasks</span>
       <a class="dropdown-item" href="{% url 'mgmt:task-list' assessment.pk %}">Task list</a>
       <a class="dropdown-item" href="{% url 'mgmt:task-list' assessment.pk %}?owner={{user.id}}&status=990">My assigned tasks</a>
+      <a class="dropdown-item" href="{% url 'mgmt:task-setup-list' assessment.pk %}">View Task Setup</a>
       <a class="dropdown-item" href="{% url 'mgmt:api:assessment-tasks' assessment.pk %}?format=xlsx">Download Tasks Export (xlsx)</a>
       <span class="dropdown-header">Assessment Analytics</span>
       <a class="dropdown-item" href="{% url 'mgmt:assessment-analytics' assessment.pk %}">View Analytics</a>
