--- a/hawc/apps/mgmt/templates/mgmt/fragments/task_detail.html
+++ b/hawc/apps/mgmt/templates/mgmt/fragments/task_detail.html
@@ -12,7 +12,7 @@
     {{object.owner|default:"---"}}
   </td>
   <td>
-    <i class="fa fa-circle mgmt-circle s{{ object.status.order }}"></i>
+    <i class="fa fa-circle" style="color: {{object.status.color}};"></i>
     {{ object.status }}
   </td>
   <td>
