--- a/hawc/apps/study/templates/study/study_list.html
+++ b/hawc/apps/study/templates/study/study_list.html
@@ -14,6 +14,11 @@
           <a class="dropdown-item" href="{% url 'riskofbias:arob_detail' assessment.pk %}">View requirements</a>
           <a class="dropdown-item" href="{% url 'riskofbias:rob_assignments' assessment.pk %}">View assignments</a>
         {% endif %}
+        {% if assessment.enable_risk_of_bias %}
+          <div class="dropdown-divider"></div>
+          <span class="dropdown-header">Study tasks</span>
+          <a class="dropdown-item" href="{% url 'mgmt:task-list' assessment.pk %}?owner={{user.id}}&status=990">View study status</a>
+        {% endif %}
       {% endactions %}
     {% endif %}
   </div>
