--- a/hawc/apps/mgmt/templates/mgmt/fragments/status_detail.html
+++ b/hawc/apps/mgmt/templates/mgmt/fragments/status_detail.html
@@ -19,7 +19,7 @@
       <button class="btn btn-primary ml-auto" hx-post="{% url 'mgmt:task-status-htmx' object.pk 'down' %}" hx-target="#status-rows" hx-swap="outerHTML">
         <i title="Switch order up" class="fa fa-arrow-down" aria-hidden="true"></i>
       </button>
-      <button class="btn btn-primary ml-auto" hx-post="{% url 'mgmt:task-status-htmx' object.pk 'up' %}" hx-target="#status-rows" hx-swap="outerHTML">
+      <button class="btn btn-primary ml-2" hx-post="{% url 'mgmt:task-status-htmx' object.pk 'up' %}" hx-target="#status-rows" hx-swap="outerHTML">
         <i title="Switch order up" class="fa fa-arrow-up" aria-hidden="true"></i>
       </button>
       <button class="btn btn-light ml-auto" hx-get="{% url 'mgmt:task-status-htmx' object.pk 'update' %}">
