--- a/hawc/apps/summary/templates/summary/summarytable_detail.html
+++ b/hawc/apps/summary/templates/summary/summarytable_detail.html
@@ -3,6 +3,7 @@
 {% block content %}
   <div class="d-flex">
     <h2>{{object}}</h2>
+    {% include "assessment/fragments/label_indicators.html" %}
     {% include "common/unpublished_badge.html" %}
     {% if crud == "Read" %}
       {% actions %}
@@ -19,11 +20,13 @@
           <a class="dropdown-item" href="{{object.get_delete_url}}">
             <i class="fa fa-fw fa-trash"></i>&nbsp;Delete
           </a>
+          {% include "assessment/components/label_modal_button.html" with icon=True %}
         {% endif %}
       {% endactions %}
     {% endif %}
   </div>
   <div id="main" style="min-height: 400px"></div>
+  {% include "assessment/components/label_modal.html" with modal_id="label-modal" %}
 {% endblock %}
 
 {% block extrajs %}
